fixed text visibility in pop ups

--- a/src/main/resources/style/Dark.css
+++ b/src/main/resources/style/Dark.css
@@ -100,3 +100,7 @@
 #DicePopRollText {
   -fx-text-fill: white;
 }
+
+#RollResultPreviewText {
+  -fx-text-fill: white;
+}
