--- a/src/main/resources/style/Winter.css
+++ b/src/main/resources/style/Winter.css
@@ -95,3 +95,6 @@
 #DicePopRollText {
   -fx-text-fill: white;
 }
+#RollResultPreviewText {
+  -fx-text-fill: white;
+}
